mof.css
		 #viewercontainer {height:400px;}
		 #infoBox {width:170px; height:300px; border-style:solid; border-width:5px; margin-right:20px; position:fixed; left:280px;}
		 #viewer {position:absolute; z-index:-1;}
		 #controlBox {width:400px; height:480px; border-style:solid; border-width:1px; position:absolute; top:60px; left:75%; z-index:auto; 
			-webkit-border-radius: 8;
			-moz-border-radius: 8;
			border-radius: 8px;
			/* http://www.colorzilla.com/gradient-editor/ */ 
background: -moz-linear-gradient(top, rgba(47,119,145,0.51) 0%, rgba(70,99,163,0.61) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(47,119,145,0.51)), color-stop(100%,rgba(70,99,163,0.61))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, rgba(47,119,145,0.51) 0%,rgba(70,99,163,0.61) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, rgba(47,119,145,0.51) 0%,rgba(70,99,163,0.61) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top, rgba(47,119,145,0.51) 0%,rgba(70,99,163,0.61) 100%); /* IE10+ */
background: linear-gradient(to bottom, rgba(47,119,145,0.51) 0%,rgba(70,99,163,0.61) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#822f7791', endColorstr='#9c4663a3',GradientType=0 ); /* IE6-9 */
		 }	
		 .controlButton {position:relative; z-index:2;}
		
		/* #maker {margin-top:20px; width:300px; height:300px; border-style:solid; border-width:2px; position:fixed; background-color:blue; background: rgba(73,155,234,1);
background: -moz-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(32,124,229,0.61) 50%, rgba(32,124,229,0.21) 100%);
background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(73,155,234,1)), color-stop(50%, rgba(32,124,229,0.61)), color-stop(100%, rgba(32,124,229,0.21)));
background: -webkit-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(32,124,229,0.61) 50%, rgba(32,124,229,0.21) 100%);
background: -o-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(32,124,229,0.61) 50%, rgba(32,124,229,0.21) 100%);
background: -ms-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(32,124,229,0.61) 50%, rgba(32,124,229,0.21) 100%);
background: radial-gradient(ellipse at center, rgba(73,155,234,1) 0%, rgba(32,124,229,0.61) 50%, rgba(32,124,229,0.21) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 ); right:1%; z-index:2;} */

 
		  img {width:50px; height:auto;}
		 .controlDiv {padding-left:10px;}
		 .selected {border-style:solid; border-width:2px; border-color:blue;}
		 .makeIcon, .MCIcon, .spIcon {height:12px; width:auto; }
		 #makeIconDown, #MCIconDown, #spIconDown {display:none;}
	/*	 #makeButton, #learnMore, #showMCButton {margin-left:100px;} */
		 #mofFail {display:none;}
		 #pageTitle {position:relative; left:30%;}
		 #clear {margin-left:10px;}
		 #maker, #MCContainer, #supercellContainer {margin-left:20px;} 
		 #probeCount {width:30px;}
		 
		 /*  http://css3buttongenerator.com/  */

.btn {
  background: #aec8d9;
  background-image: -webkit-linear-gradient(top, #aec8d9, #d2d8db);
  background-image: -moz-linear-gradient(top, #aec8d9, #d2d8db);
  background-image: -ms-linear-gradient(top, #aec8d9, #d2d8db);
  background-image: -o-linear-gradient(top, #aec8d9, #d2d8db);
  background-image: linear-gradient(to bottom, #aec8d9, #d2d8db);
  -webkit-border-radius: 28;
  -moz-border-radius: 28;
  border-radius: 28px;
  font-family: Arial;
  color: #616161;
  font-size: 10px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}


.btn:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

